HBASE-27591 [JDK17] Fix failure TestImmutableScan#testScanCopyConstructor (#4994)
Co-authored-by: tianhang.tang <tianhang.tang@shopee.com>
Signed-off-by: Reid Chan <reidchan@apache.org>
Signed-off-by: Duo Zhang <zhangduo@apache.org>